SEAT-238 Fix tooltip alignment (#172)
* altered example to show tooltip misalignment

* fixed tooltip misalignment

* rebuilt binaries, fixed issues with using-lib example

* fixed various tests

* 1.2.1

--- a/examples/using-module/main.css
+++ b/examples/using-module/main.css
@@ -3,3 +3,8 @@
 body {
     margin: 0;
 }
+
+#map {
+    margin-left: 100px;
+    margin-top: 100px;
+}
